<resources>
    <string name="app_name">Inclass_07</string>
    <string name="trivia_app">Trivia App</string>
    <string name="welcome_to">Welcome To</string>
    <string name="exit">Exit</string>
    <string name="trivia_ready">Trivia Ready</string>
    <string name="start_trivia">Start Trivia</string>
    <string name="todo">TODO</string>
    <string name="Q">Q</string>
    <string name="time_left_0_seconds">Time Left : 0 Seconds</string>
    <string name="question_goes_here">Question goes here</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="trivia_stats">Trivia Stats</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="try_again">Try Again</string>
</resources>
